--- a/index.html
+++ b/index.html
@@ -3,61 +3,192 @@
   <head>
     <meta charset="utf-8">
     <title>Quiz</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script type="text/javascript" src="js/score.js"></script>
   </head>
   <body>
 
-    <header>
-        <h1>Quiz Quiz</h1>
-    </header>
-
     <div class="widthWrap">
-      <div class="card samllValue" data-answer="20" data-question="0">
+      <div class="blackBlock">
+        <h1>Modèle de Quiz</h1>
+      </div>
+
+      <!-- QUESTION FIRST -->
+      <div class="card smallValue" data-answer="?" data-question="0">
         <div class="textBloc" id="card_0">
 
-          <div class="question">
-            <h2>Cette entrperise existe depuis 20 ans.*</h2>
+          <div id="after_response" class="quiz">
+            <h2>Question 1.*</h2>
             <p class="asterix">*</p>
-            <span>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-              do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum."
+            <span class="spanIntro">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+              do eiusmod tempor incididunt ut labore et dolore magna aliqua."
             </span>
             <div class="inputWrapper">
-              <p>"Combien y a-t-il de membres chez cette entreprise ?"</p>
-              <input class="payInput desktopHidden" maxlength="2" type="text" name="" value="">
-              <input class="payInput mobileHidden" type="number" step="1" min="0" max="99" maxlength="2" name="" value="">
-              <span class="currency">personnes</span>
-              <button class="btn validateBtn" onclick="xt_med('C', xtn2, 'Nouveau_Questionnaire::entreprise_sydo::question_2::valider', 'A');" type="button" name="button">Valider</button>
+              <p class="question">"Lorem ipsum dolor sit amet ?"</p>
+              <input class="payInput desktopHidden" id="textbox" maxlength="2" type="text" name="">
+              <!-- <input class="payInput mobileHidden" type="number" step="1" min="0" max="99" maxlength="2" name=""> -->
+              <span class="currency">€</span>
+              <br/>
+              <button class="btn validateBtn" onclick="check();" type="button">VALIDER</button>
             </div>
           </div>
 
-          <div class="answer">
-            <div class="answer-1">Actuellement nous sommes 22 chez cette entreprise !</div>
-            <div class="verbatim">
+          <div id="after_submit" class="answer">
+            <div class="answer-1">Réponse : Bla bla bla bla bla bla bla !</div>
+            <div class="stats">
               <div class="averageStat">
-                <div>
-                  <span class="dataTitle">Votre réponse :</span>
-                  <span class="payInputUserAnswer"></span>
-                  <span class="userAnswer">
-                    <span class="distanceUser"></span>
-                    " personnes de"
-                    <span class="moreLessUser"></span>
-                  </span>
-                  ")"
+                  <span class="dataResponse">Votre réponse : gkjndkjfgbdflgbl.</span>
                   <br/>
+                  <span class="dataResponseUser">Estimation moyenne des autres utilisateurs : gnfglbngjbdk.</span>
+              </div>
+            </div>
+              <p class="moreExplanation">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                sunt in culpa qui officia deserunt mollit anim id est laborum."
+              </p>
+
+            </div>
+          </div>
+        </div>
+        <a href="#card_1" class="card_link">Continuer le quiz<i class="fas fa-angle-down fa-2x"></i></a>
+
+        <!-- QUESTION SECOND -->
+        <div class="card smallValue" data-answer="20" data-question="1">
+          <div class="textBloc" id="card_1">
+
+            <div class="quiz">
+              <h2>Question 2.*</h2>
+              <p class="asterix">*</p>
+              <span class="spanIntro">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+              </span>
+              <div class="inputWrapper">
+                <p class="question">"Lorem ipsum dolor sit amet ?"</p>
+                <input class="payInput desktopHidden" maxlength="2" type="text" name="" value="">
+                <!-- <input class="payInput mobileHidden" type="number" step="1" min="0" max="99" maxlength="2" name="" value=""> -->
+                <span class="currency">personnes/âge/chiffres/€</span>
+                <br/>
+                <button class="btn validateBtn" onclick="check();" type="button" name="button">VALIDER</button>
+              </div>
+            </div>
+
+            <div id="after_submit" class="answer">
+              <div class="answer-1">Réponse : Bla bla bla bla bla bla bla !</div>
+              <div class="stats">
+                <div class="averageStat">
+                    <span class="dataResponse">Votre réponse : gkjndkjfgbdflgbl.</span>
+                    <br/>
+                    <span class="dataResponseUser">Estimation moyenne des autres utilisateurs : gnfglbngjbdk.</span>
+                </div>
+              </div>
+                <p class="moreExplanation">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                  enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                  reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                  nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                  sunt in culpa qui officia deserunt mollit anim id est laborum."
+                </p>
+
+              </div>
+            </div>
+
+          </div>
+          <a href="#card_2" class="card_link">Continuer le quiz<i class="fas fa-angle-down fa-2x"></i></a>
+
+          <!-- QUESTION THIRD -->
+          <div class="card smallValue" data-answer="20" data-question="2">
+            <div class="textBloc" id="card_2">
+
+              <div class="quiz">
+                <h2>Question 3.*</h2>
+                <p class="asterix">*</p>
+                <span class="spanIntro">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+                </span>
+                <div class="inputWrapper">
+                  <p class="question">"Lorem ipsum dolor sit amet ?"</p>
+                  <input class="payInput desktopHidden" maxlength="2" type="text" name="" value="">
+                  <!-- <input class="payInput mobileHidden" type="number" step="1" min="0" max="99" maxlength="2" name="" value=""> -->
+                  <span class="currency">€</span>
+                  <br/>
+                  <button class="btn validateBtn" onclick="hide_show('text');" type="button" name="button">VALIDER</button>
+                </div>
+              </div>
+
+              <div id="after_submit" class="answer">
+                <div class="answer-1">Réponse : Bla bla bla bla bla bla bla !</div>
+                <div class="stats">
+                  <div class="averageStat">
+                      <span class="dataResponse">Votre réponse : gkjndkjfgbdflgbl.</span>
+                      <br/>
+                      <span class="dataResponseUser">Estimation moyenne des autres utilisateurs : gnfglbngjbdk.</span>
+                  </div>
+                </div>
+                  <p class="moreExplanation">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                    enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                    reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                    sunt in culpa qui officia deserunt mollit anim id est laborum."
+                  </p>
+
                 </div>
               </div>
 
             </div>
-          </div>
+            <a href="#card_1" class="card_link">Continuer le quiz<i class="fas fa-angle-down fa-2x"></i></a>
 
-        </div>
-        <a href="#card_1" class="card_link">Continuer le quizz</a>
-      </div>
+            <!-- QUESTION FOUR -->
+            <div class="card smallValue" data-answer="20" data-question="0">
+              <div class="textBloc" id="card_0">
+
+                <div class="quiz">
+                  <h2>Question 4.*</h2>
+                  <p class="asterix">*</p>
+                  <span class="spanIntro">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+                  </span>
+                  <div class="inputWrapper">
+                    <p class="question">"Lorem ipsum dolor sit amet ?"</p>
+                    <input class="payInput desktopHidden" maxlength="2" type="text" name="" value="">
+                    <!-- <input class="payInput mobileHidden" type="number" step="1" min="0" max="99" maxlength="2" name="" value=""> -->
+                    <span class="currency">€</span>
+                    <br/>
+                    <button class="btn validateBtn" onclick="hide_show('text');" type="button" name="button">VALIDER</button>
+                  </div>
+                </div>
+
+                <div id="after_submit" class="answer">
+                  <div class="answer-1">Réponse : Bla bla bla bla bla bla bla !</div>
+                  <div class="stats">
+                    <div class="averageStat">
+                        <span class="dataResponse">Votre réponse : gkjndkjfgbdflgbl.</span>
+                        <br/>
+                        <span class="dataResponseUser">Estimation moyenne des autres utilisateurs : gnfglbngjbdk.</span>
+                    </div>
+                  </div>
+                    <p class="moreExplanation">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                      do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                      enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                      nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                      reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                      nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                      sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    </p>
+
+                  </div>
+                </div>
+              </div>
     </div>
 
   </body>
