--- a/index.html
+++ b/index.html
@@ -12,47 +12,42 @@
   </head>
   <body>
 
-    <div class="widthWrap">
-      <div class="blackBlock">
+    <div class="widthQuiz">
+      <div class="titleBlock">
         <h1>Modèle de Quiz</h1>
       </div>
 
       <!-- QUESTION FIRST -->
-      <div class="card smallValue" data-answer="?" data-question="0">
-        <div class="textBloc" id="card_0">
+      <div class="card smallValue">
 
-          <div id="after_response" class="quiz">
+        <div class="quizBlock" id="card_0">
+
+          <form id="after_response" class="quiz" method="POST" action="">
             <h2>Question 1.*</h2>
             <p class="asterix">*</p>
-            <span class="spanIntro">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-              do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-            </span>
+            <span class="spanIntro">"L'Inde compte 1,3 milliard d'habitants mais il connaît un déséquilibre important du ratio hommes-femmes"</span>
             <div class="inputWrapper">
-              <p class="question">"Lorem ipsum dolor sit amet ?"</p>
-              <input class="payInput desktopHidden" id="textbox" maxlength="2" type="text" name="">
-              <!-- <input class="payInput mobileHidden" type="number" step="1" min="0" max="99" maxlength="2" name=""> -->
-              <span class="currency">€</span>
+              <p class="question">"Selon vous, de combien de femmes le pays manque-t-il ?"</p>
+              <input id="question0" class="responseInput desktopHidden" maxlength="2" type="text" name="question0">
+              <span class="currency">Millions</span>
               <br/>
-              <button class="btn validateBtn" onclick="check();" type="button">VALIDER</button>
+              <button type="button" class="btn validateBtn" onclick="check();" value="data">VALIDER</button>
             </div>
-          </div>
+          </form>
 
           <div id="after_submit" class="answer">
-            <div class="answer-1">Réponse : Bla bla bla bla bla bla bla !</div>
+            <div class="rightOrWrong">echo 'c'est une bonne réponse ! | 'c'est une mauvaise réponse !</div>
+            <div class="answer-0">Vous avez répondu : $responseUser</div>
             <div class="stats">
               <div class="averageStat">
-                  <span class="dataResponse">Votre réponse : gkjndkjfgbdflgbl.</span>
+                  <span class="dataResponse">Votre réponse : $response && $responseUser</span>
                   <br/>
-                  <span class="dataResponseUser">Estimation moyenne des autres utilisateurs : gnfglbngjbdk.</span>
+                  <span class="dataResponseUsers">Estimation moyenne des autres utilisateurs : $responseMoyenneUsers</span>
               </div>
             </div>
-              <p class="moreExplanation">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum."
+              <p class="moreExplanation">"L'Inde accuse un déficit de 63 millions de femmes, révèle un rapport concernant la situation économique du pays.
+                C'est l'équivalent de la population française ! Ainsi, bien qu'il ne soit pas autorisé en Inde de révéler le sexe du futur bébé, il est courant qu'il
+                soit annoncé à l'échographie et qu'un avortement illégal le suive quand il s'agit d'une fille."
               </p>
 
             </div>
@@ -60,135 +55,6 @@
         </div>
         <a href="#card_1" class="card_link">Continuer le quiz<i class="fas fa-angle-down fa-2x"></i></a>
 
-        <!-- QUESTION SECOND -->
-        <div class="card smallValue" data-answer="20" data-question="1">
-          <div class="textBloc" id="card_1">
-
-            <div class="quiz">
-              <h2>Question 2.*</h2>
-              <p class="asterix">*</p>
-              <span class="spanIntro">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-              </span>
-              <div class="inputWrapper">
-                <p class="question">"Lorem ipsum dolor sit amet ?"</p>
-                <input class="payInput desktopHidden" maxlength="2" type="text" name="" value="">
-                <!-- <input class="payInput mobileHidden" type="number" step="1" min="0" max="99" maxlength="2" name="" value=""> -->
-                <span class="currency">personnes/âge/chiffres/€</span>
-                <br/>
-                <button class="btn validateBtn" onclick="check();" type="button" name="button">VALIDER</button>
-              </div>
-            </div>
-
-            <div id="after_submit" class="answer">
-              <div class="answer-1">Réponse : Bla bla bla bla bla bla bla !</div>
-              <div class="stats">
-                <div class="averageStat">
-                    <span class="dataResponse">Votre réponse : gkjndkjfgbdflgbl.</span>
-                    <br/>
-                    <span class="dataResponseUser">Estimation moyenne des autres utilisateurs : gnfglbngjbdk.</span>
-                </div>
-              </div>
-                <p class="moreExplanation">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                  enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                  nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                  reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                  nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                  sunt in culpa qui officia deserunt mollit anim id est laborum."
-                </p>
-
-              </div>
-            </div>
-
-          </div>
-          <a href="#card_2" class="card_link">Continuer le quiz<i class="fas fa-angle-down fa-2x"></i></a>
-
-          <!-- QUESTION THIRD -->
-          <div class="card smallValue" data-answer="20" data-question="2">
-            <div class="textBloc" id="card_2">
-
-              <div class="quiz">
-                <h2>Question 3.*</h2>
-                <p class="asterix">*</p>
-                <span class="spanIntro">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-                </span>
-                <div class="inputWrapper">
-                  <p class="question">"Lorem ipsum dolor sit amet ?"</p>
-                  <input class="payInput desktopHidden" maxlength="2" type="text" name="" value="">
-                  <!-- <input class="payInput mobileHidden" type="number" step="1" min="0" max="99" maxlength="2" name="" value=""> -->
-                  <span class="currency">€</span>
-                  <br/>
-                  <button class="btn validateBtn" onclick="hide_show('text');" type="button" name="button">VALIDER</button>
-                </div>
-              </div>
-
-              <div id="after_submit" class="answer">
-                <div class="answer-1">Réponse : Bla bla bla bla bla bla bla !</div>
-                <div class="stats">
-                  <div class="averageStat">
-                      <span class="dataResponse">Votre réponse : gkjndkjfgbdflgbl.</span>
-                      <br/>
-                      <span class="dataResponseUser">Estimation moyenne des autres utilisateurs : gnfglbngjbdk.</span>
-                  </div>
-                </div>
-                  <p class="moreExplanation">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                    enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                    reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                    sunt in culpa qui officia deserunt mollit anim id est laborum."
-                  </p>
-
-                </div>
-              </div>
-
-            </div>
-            <a href="#card_1" class="card_link">Continuer le quiz<i class="fas fa-angle-down fa-2x"></i></a>
-
-            <!-- QUESTION FOUR -->
-            <div class="card smallValue" data-answer="20" data-question="0">
-              <div class="textBloc" id="card_0">
-
-                <div class="quiz">
-                  <h2>Question 4.*</h2>
-                  <p class="asterix">*</p>
-                  <span class="spanIntro">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-                  </span>
-                  <div class="inputWrapper">
-                    <p class="question">"Lorem ipsum dolor sit amet ?"</p>
-                    <input class="payInput desktopHidden" maxlength="2" type="text" name="" value="">
-                    <!-- <input class="payInput mobileHidden" type="number" step="1" min="0" max="99" maxlength="2" name="" value=""> -->
-                    <span class="currency">€</span>
-                    <br/>
-                    <button class="btn validateBtn" onclick="hide_show('text');" type="button" name="button">VALIDER</button>
-                  </div>
-                </div>
-
-                <div id="after_submit" class="answer">
-                  <div class="answer-1">Réponse : Bla bla bla bla bla bla bla !</div>
-                  <div class="stats">
-                    <div class="averageStat">
-                        <span class="dataResponse">Votre réponse : gkjndkjfgbdflgbl.</span>
-                        <br/>
-                        <span class="dataResponseUser">Estimation moyenne des autres utilisateurs : gnfglbngjbdk.</span>
-                    </div>
-                  </div>
-                    <p class="moreExplanation">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                      do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                      enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                      nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                      reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                      nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                      sunt in culpa qui officia deserunt mollit anim id est laborum."
-                    </p>
-
-                  </div>
-                </div>
-              </div>
     </div>
 
   </body>
