--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="js/click.js"></script> TEST AJAX -->
     <script type="text/javascript" src="js/score.js"></script>
   </head>
   <body>
@@ -22,22 +24,22 @@
 
         <div class="quizBlock" id="card_0">
 
-          <form id="after_response" class="quiz" method="POST" action="">
+          <form id="after_response" method="POST" action="" name="after_response">
             <h2>Question 1.*</h2>
             <p class="asterix">*</p>
-            <span class="spanIntro">"L'Inde compte 1,3 milliard d'habitants mais il connaît un déséquilibre important du ratio hommes-femmes"</span>
+            <span class="spanIntro">"L'Inde compte 1,3 milliard d'habitants mais connaît un déséquilibre important du ratio hommes-femmes"</span>
             <div class="inputWrapper">
               <p class="question">"Selon vous, de combien de femmes le pays manque-t-il ?"</p>
-              <input id="question0" class="responseInput desktopHidden" maxlength="2" type="text" name="question0">
+              <input id="question0" class="responseInput" name="question0" type="text" maxlength="2">
               <span class="currency">Millions</span>
               <br/>
-              <button type="button" class="btn validateBtn" onclick="check();" value="data">VALIDER</button>
+              <button type="button" class="btn validateBtn" onclick="check();">VALIDER</button>
             </div>
           </form>
 
           <div id="after_submit" class="answer">
-            <div class="rightOrWrong">echo 'c'est une bonne réponse ! | 'c'est une mauvaise réponse !</div>
-            <div class="answer-0">Vous avez répondu : $responseUser</div>
+            <div class="rightOrWrong">C'est une bonne réponse !</div>
+            <div class="answer-0">Vous avez répondu : 63.</div>
             <div class="stats">
               <div class="averageStat">
                   <span class="dataResponse">Votre réponse : $response && $responseUser</span>
@@ -49,10 +51,11 @@
                 C'est l'équivalent de la population française ! Ainsi, bien qu'il ne soit pas autorisé en Inde de révéler le sexe du futur bébé, il est courant qu'il
                 soit annoncé à l'échographie et qu'un avortement illégal le suive quand il s'agit d'une fille."
               </p>
+           </div>
 
-            </div>
           </div>
         </div>
+
         <a href="#card_1" class="card_link">Continuer le quiz<i class="fas fa-angle-down fa-2x"></i></a>
 
     </div>
