put an autofocus to the input quiz :cat:

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span class="spanIntro">"L'Inde compte 1,3 milliard d'habitants mais connaît un déséquilibre important du ratio hommes-femmes"</span>
             <div class="inputWrapper">
               <p class="question">"Selon vous, de combien de femmes le pays manque-t-il ?"</p>
-              <input id="question0" class="responseInput" name="question0" type="text" maxlength="2">
+              <input id="question0" class="responseInput" name="question0" type="text" maxlength="2" autofocus>
               <span class="currency">Millions</span>
               <br/>
               <button type="button" class="btn validateBtn" onclick="check();">VALIDER</button>
