--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- <script type="text/javascript" src="js/click.js"></script> TEST AJAX -->
+    <!-- TEST AJAX -->
+    <script type="text/javascript" src="js/click.js"></script>
     <script type="text/javascript" src="js/score.js"></script>
   </head>
   <body>
@@ -24,7 +25,7 @@
 
         <div class="quizBlock" id="card_0">
 
-          <form id="after_response" method="POST" action="" name="after_response">
+          <form id="after_response" method="POST" action="controller.php" name="after_response">
             <h2>Question 1.*</h2>
             <p class="asterix">*</p>
             <span class="spanIntro">"L'Inde compte 1,3 milliard d'habitants mais connaît un déséquilibre important du ratio hommes-femmes"</span>
@@ -33,7 +34,7 @@
               <input id="question0" class="responseInput" name="question0" type="text" maxlength="2" autofocus>
               <span class="currency">Millions</span>
               <br/>
-              <button type="button" class="btn validateBtn" onclick="check();">VALIDER</button>
+              <button id="button" type="button" class="btn validateBtn" onclick="check();">VALIDER</button>
             </div>
           </form>
 
@@ -42,7 +43,7 @@
             <div class="answer-0">Vous avez répondu : 63.</div>
             <div class="stats">
               <div class="averageStat">
-                  <span class="dataResponse">Votre réponse : $response && $responseUser</span>
+                  <span class="dataResponse">Votre réponse : <p id="dataResponse"></p></span>
                   <br/>
                   <span class="dataResponseUsers">Estimation moyenne des autres utilisateurs : $responseMoyenneUsers</span>
               </div>
