if response user is numeric it's ok, but elseif it's false :cat:

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           </form>
 
           <div id="after_submit" class="answer">
-            <div class="rightOrWrong">C'est une bonne réponse !</div>
-            <div class="answer-0">Vous avez répondu : 63.</div>
+            <div class="rightOrWrong">C'est une bonne réponse ?!</div>
+            <div id="dataResponse" class="answer-0"></div>
             <div class="stats">
               <div class="averageStat">
-                  <span class="dataResponse">Votre réponse : <p id="dataResponse"></p></span>
+                  <!-- <span class="dataResponse">Votre réponse : <p id="dataResponse"></p></span> -->
                   <br/>
                   <span class="dataResponseUsers">Estimation moyenne des autres utilisateurs : $responseMoyenneUsers</span>
               </div>
