--- a/index.html
+++ b/index.html
@@ -59,6 +59,43 @@
 
         <a href="#card_1" class="card_link">Continuer le quiz<i class="fas fa-angle-down fa-2x"></i></a>
 
+        <!-- QUESTION SECOND -->
+        <div class="card smallValue">
+
+          <div class="quizBlock" id="card_1">
+
+            <form id="after_response1" method="POST" action="controller.php" name="after_response">
+              <h2>Question 2.*</h2>
+              <p class="asterix">*</p>
+              <span class="spanIntro">"L'Inde compte 1,3 milliard d'habitants mais connaît un déséquilibre important du ratio hommes-femmes"</span>
+              <div class="inputWrapper">
+                <p class="question">"Selon vous, de combien de femmes le pays manque-t-il ?"</p>
+                <input id="question1" class="responseInput" name="question1" type="text" maxlength="10" autofocus>
+                <span class="currency">Millions</span>
+                <br/>
+                <button id="button" type="button" class="btn validateBtn" onclick="check();">VALIDER</button>
+              </div>
+            </form>
+
+            <div id="after_submit1" class="answer">
+              <div class="rightOrWrong">C'est une bonne réponse ?!</div>
+              <div id="dataResponse" class="answer-0"></div>
+              <div class="stats">
+                <div class="averageStat">
+                    <!-- <span class="dataResponse">Votre réponse : <p id="dataResponse"></p></span> -->
+                    <br/>
+                    <span class="dataResponseUsers">Estimation moyenne des autres utilisateurs : $responseMoyenneUsers</span>
+                </div>
+              </div>
+                <p class="moreExplanation">"L'Inde accuse un déficit de 63 millions de femmes, révèle un rapport concernant la situation économique du pays.
+                  C'est l'équivalent de la population française ! Ainsi, bien qu'il ne soit pas autorisé en Inde de révéler le sexe du futur bébé, il est courant qu'il
+                  soit annoncé à l'échographie et qu'un avortement illégal le suive quand il s'agit d'une fille."
+                </p>
+             </div>
+
+            </div>
+          </div>
+
     </div>
 
   </body>
